# mailmerge

./: README.md  email.txt  example-names.txt  main.py  requirements.txt  setup.cfg
mailmerge/: __main__.py
