[metadata]
name = mailmerge
summary = A simple mailmerge script
author = Chris Norman
author-email = chris.norman2@googlemail.com
description-file = README.md
home-page = https://github.com/chrisnorman7/
license = MPL-2

[entry_points]
console_scripts =
    mailmerge = mailmerge:main

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build
